Fixing scrollbar overflow issue on android 4.1.2 chrome

--- a/modules/widgets/pagination/pageination.scss
+++ b/modules/widgets/pagination/pageination.scss
@@ -93,6 +93,7 @@ $module: '.pagination';
           display:block;
           max-width: 100%;
           overflow-x: scroll;
+          padding-bottom: 10px;
 
           ul {
             display: table;
